Test to see if adding a top padding to the body fixes navbar covering content. This only happens on GitHub pages - does not happen on localhost.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     overflow: auto;
     margin-top: 80px;
     margin-bottom: 50px;
+    padding-top: 100px;
 }
 
 .home {
